# pyargdown

./: .gitignore  CITATION.cff  README.md  pyproject.toml
src/pyargdown/: __about__.py  __init__.py  model.py
src/pyargdown/parser/: __init__.py  argument_map_parser.py  argument_parser.py  base.py  main.py  postprocessor.py  preprocessor.py
tests/: test_argdown_model.py  test_argument_map_transformer.py  test_argument_syntax_errors.py  test_argument_transformer.py  test_lark_parsers.py  test_main_parser.py  test_preprocessor.py  test_syntheticdata.py
